AWS_Project/ALB.tf
resource "aws_security_group" "wordpress_sg" {
  name        = "wordpress-sg"
  description = "wordpress-sg"
  vpc_id      = aws_vpc.srikaanth_vpc.id

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = aws_vpc.srikaanth_vpc.cidr_block
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "wordpress-sg"
  }
}

resource "aws_lb" "main" {
  name               = "wordpress-lb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.wordpress_sg.id]
  subnets            = [aws_subnet.subnet_public1_us_east_1a.id, aws_subnet.subnet_public2_us_east_1b.id]
  tags = {
    Environment = "dev"
  }
}

resource "aws_lb_listener" "main" {
  load_balancer_arn = aws_lb.main.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type = "fixed-response"

    fixed_response {
      content_type = "text/plain"
      message_body = "Unauthorized"
      status_code  = "403"
    }
  }

}
